# Magellano

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  github-cheatsheet.md  imgui.ini  main.drawio  projects-tree.drawio  requirements.txt  test.drawio
.github/instructions/: instructions.instructions.md
docs/: TODO.md  crypto_usage.md  login_fix.md  memos.txt
src/: crypto_utils.cpp  env.cpp  env.h  functions.cpp  functions.h  gui.cpp  gui.h  main.cpp  settings.cpp  settings.h
src/gui/: Attack.cpp  BottomBar.cpp  Changelog.cpp  Demo.cpp  FrameManager.cpp  Help.cpp  Login.cpp  MenuBar.cpp  MinimizeAndExit.cpp  Network.cpp  Settings.cpp  ShowMyWindow.cpp  TabWindow.cpp  Table.cpp  Tree.cpp  Window1.cpp  gui.h
src/lib/: crypto_utils.h  custom_colors.cpp  custom_colors.h  functions.cpp  functions.h
src/settings/: env.cpp  env.h  settings.cpp  settings.h
